write boilerplate code

--- a/OrderTracker/Views/Home/Index.cshtml
+++ b/OrderTracker/Views/Home/Index.cshtml
@@ -3,4 +3,4 @@
 }
 
 <h1>Welcome to the Order Tracker!</h1>
-<h3><a href='/vendors'>Enter a new vendor</a></h3>
+<h3><a href='/vendors'>Go to vendor page</a></h3>
